# Gazprea-Compiler

./: LICENSE  LICENSE.md  README.md  bashllc.sh
grammar/: Gazprea.g4
include/: AST.h  ASTBuilder.h  ASTWalker.h  ASTXMLWalker.h  AddFreeNodesWalker.h  AliasingErrorWalker.h  ArgumentMutabilityErrorWalker.h  BackEnd.h  BaseASTWalker.h  BinaryOpTypeErrorWalker.h  BreakContinuePruneWalker.h  BreakContinueStatementErrorWalker.h  CallFuncCallErrorWalker.h  CodeGenASTWalker.h  CompileTimeExceptions.h  ConstAssignErrorWalker.h  ConstantFoldingWalker.h  ControlExpressionsWalker.h  ControlFlowReturnErrorWalker.h  DeclStatementErrorWalker.h  DefineSymbols.h  DefinitionErrorWalker.h  ExampleASTWalker.h  FuncProcCallWithSameNumberOfParamsWalker.h  FuncProcDefContainsParamIDsWalker.h  GlobalErrorWalker.h  GlobalStatementErrorWalker.h  MainErrorWalker.h  ProcReturnCallErrorWalker.h  ReturnErrorWalker.h  Scope.h  ScopeToFreeWalker.h  ScopedSymbol.h  SizeErrorWalker.h  StdInOutStatementErrorWalker.h  Symbol.h  SymbolTable.h  SyntaxErrorListener.h  TupleAccessErrorWalker.h  TupleAssignErrorWalker.h  (+4 more)
runtime/src/: CMakeLists.txt  MathError.c  MatrixOps.c  SizeError.c  StreamPolling.c  placeholder.c
src/: CMakeLists.txt  ExampleASTWalker.cpp  main.cpp
src/AstBuildingPass/: AST.cpp  ASTBuilder.cpp  ASTXMLWalker.cpp  DefineSymbols.cpp
src/CodeGenFunctions/: BackEnd.cpp  EmitBinaryOps.cpp  EmitFunctions.cpp  EmitMatrix.cpp  EmitTuple.cpp  EmitVectors.cpp  StreamFunctions.cpp  TypeCastingPromotionFunctions.cpp  TypeCheckFunctions.cpp
src/CodeGenPass/: CodeGenASTWalker.cpp
src/SymbolTableClasses/: Scope.cpp  ScopedSymbol.cpp  Symbol.cpp  SymbolTable.cpp  Type.cpp
src/validationPasses/: AddFreeNodesWalker.cpp  AliasingErrorWalker.cpp  ArgumentMutabilityErrorWalker.cpp  BinaryOpTypeErrorWalker.cpp  BreakContinuePruneWalker.cpp  BreakContinueStatementErrorWalker.cpp  CallFuncCallErrorWalker.cpp  ConstAssignErrorWalker.cpp  ConstantFoldingWalker.cpp  ControlExpressionsWalker.cpp  ControlFlowReturnErrorWalker.cpp  DeclStatementErrorWalker.cpp  DefinitionErrorWalker.cpp  FuncProcCallWithSameNumberOfParamsWalker.cpp  FuncProcDefContainsParamIDsWalker.cpp  GlobalErrorWalker.cpp  GlobalStatementErrorWalker.cpp  MainErrorWalker.cpp  ProcReturnCallErrorWalker.cpp  ReturnErrorWalker.cpp  ScopeToFreeWalker.cpp  SizeErrorWalker.cpp  StdInOutStatementErrorWalker.cpp  SyntaxErrorListener.cpp  TupleAccessErrorWalker.cpp  TupleAssignErrorWalker.cpp  TypeDefStatementErrorWalker.cpp  TypeInferWalker.cpp  ValidExprErrorWalker.cpp
tests/: GazpreaCiCompileConfig.json  GazpreaCompileConfig.json  GazpreaCompileJuan.json  GazpreaInterpConfig.json
tests/Part1Failed/: CallError3.test  bad-cast-tup.in  character_read_eof_write.in  fail2.in  global-stmt.in  not-aliasing.in  prevent-same-arg-names.in  prototype-matching-1.in  real-lit.in  return-type-promotion.in  tup-builder-pure.in  tup-builder.in  valid-return-type2.in
tests/Part1Failed/const-tuple-reassign/: const-tuple-reassign.in
tests/Part1Failed/function-procedure-param/: function-procedure-param.in
tests/Part1Failed/function-too-few-args/: function-too-few-args.in
tests/Part1Failed/function-too-many-args/: function-too-many-args.in
tests/Part1Failed/global-invalid-stat-2/: global-invalid-stat-2.in
tests/Part1Failed/part-2-errors/: invalid-argument-type1.in
tests/Part1Failed/procedure-binary-op/: procedure-binary-op.in
tests/Part1Failed/procedure-called-in-func-2/: procedure-called-in-func-2.in
tests/Part1Failed/procedure-extraneous-return/: procedure-extraneous-return.in
tests/Part1Failed/procedure-invalid-location-2/: procedure-invalid-location-2.in
tests/Part1Failed/procedure-procedure-param/: procedure-procedure-param.in
tests/Part1Failed/procedure-vararg-promotion/: procedure-vararg-promotion.in
tests/testfiles/ControlFlow/: DupTypedef.in  conditionals.in  conditionalsReturn.in  loopDecl.in  loops.in  loopsReturn.in  reachable-ret1.in  reachable-ret2.in  unreachable-ret1.in
tests/testfiles/EmitChecks/: emitCharCheck.in  emitProcCall1.in  emitProcWithoutRet.in  emitTupleCast.in  emitTuples.in  globalCheck.in  stdInputCheck.in
tests/testfiles/SpecTests/: nestedFunctionCallInFunctionCalls.in
tests/testfiles/gazpranos-old/: ControlExpressionFloatInConst.in  FuncDefParamWithoutId.in  ProcDefParamWithoutId.in  alreadyDefined.in  assignmentContainsProcThatReturnsNone.in  badAssign.in  badAssign2.in  badAssign3.in  binaryOpContainsProcThatReturnsNone.in  breakOutsideLoop.in  callFuncWithCall.in  constAssignment.in  continueOutsideLoop.in  declAfterOtherStatement.in  declContainsProcThatReturnsNone.in  divZero.in  (+52 more)
(+338 files in other folders)
